--- a/package.json
+++ b/package.json
@@ -35,32 +35,33 @@
   },
   "homepage": "https://github.axa.com/Digital/bauta-nodejs#readme",
   "devDependencies": {
-    "@commitlint/config-conventional": "8.3.4",
+    "@commitlint/config-conventional": "12.0.1",
     "@types/body-parser": "1.19.0",
     "@types/compression": "1.7.0",
-    "@types/cors": "2.8.6",
+    "@types/cors": "2.8.10",
     "@types/debug": "4.1.5",
-    "@types/express": "4.17.6",
+    "@types/express": "4.17.11",
     "@types/helmet": "0.0.47",
-    "@types/jest": "25.2.3",
-    "@types/memoizee": "0.4.4",
-    "@types/morgan": "1.9.0",
-    "@types/node": "14.0.4",
+    "@types/jest": "26.0.20",
+    "@types/memoizee": "0.4.5",
+    "@types/morgan": "1.9.2",
+    "@types/node": "14.14.34",
     "@types/object-path": "0.11.0",
-    "@types/pino": "6.0.1",
-    "@types/supertest": "2.0.9",
+    "@types/pino": "6.3.6",
+    "@types/supertest": "2.0.10",
     "@types/swagger-ui-express": "4.1.2",
-    "@typescript-eslint/eslint-plugin": "2.34.0",
-    "@typescript-eslint/parser": "2.34.0",
-    "commitizen": "4.1.2",
-    "commitlint": "8.3.5",
-    "cz-conventional-changelog": "3.2.0",
-    "eslint": "6.8.0",
-    "eslint-config-axa-digital-node-typescript": "3.0.3",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-jest": "23.13.1",
-    "eslint-plugin-prettier": "3.1.3",
+    "@typescript-eslint/eslint-plugin": "4.17.0",
+    "@typescript-eslint/parser": "4.17.0",
+    "bench": "^0.3.6",
+    "commitizen": "4.2.3",
+    "commitlint": "12.0.1",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7.21.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.2.1",
+    "eslint-plugin-prettier": "3.3.1",
     "fast-safe-stringify": "2.0.7",
     "form-data": "3.0.0",
     "got": "10.7.0",
